<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/main_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">
    <TextView
        android:id="@+id/city_name"
        style="@style/heading_text"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginTop="20dp"
        android:text="@string/city" />
        <TextView
            android:id="@+id/current_condition"
            style="@style/sub_text"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/mostly_clear" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/live_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_19"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:id="@+id/refresh"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_refresh"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2024_05_27_08_25"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_time"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/locale_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2024_05_27_08_25"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginStart="20dp"/>
        </LinearLayout>
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="#00FFFFFF"
                app:cardCornerRadius="11dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="5dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_air_index" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/air_quality"
                            android:textColor="@color/sub_text"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/index_condition_text"
                        style="@style/Weather_detail"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/_3_low_health_risk" />

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekBar_air_quality"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:progressDrawable="@drawable/seekbar"
                        android:splitTrack="false"
                        android:thumb="@drawable/thumb" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:columnCount="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:text="@string/see_more"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_columnWeight="1"
                            android:layout_gravity="end"
                            android:background="?attr/selectableItemBackground"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/ic_arrow" />
                    </GridLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <include layout="@layout/layout_for_weather_detail" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/black"
        android:indeterminate="true"/>
</RelativeLayout>
